# rdesq

./: README.md  package-lock.json  package.json
.github/workflows/: release.yml
frontend/: index.html
frontend/css/: style.css
frontend/js/: api.js  app.js  i18n.js
scripts/: build-appimage-sharun.sh
src-tauri/: Cargo.toml  postinstall.sh  rdesq.desktop.hbs  tauri.conf.json
src-tauri/binaries/: .gitignore  download-plink.ps1
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  crypto.rs  db.rs  lib.rs  main.rs  models.rs  ping.rs
