[package]
name = "rdesq"
version = "1.2.0"
description = "Remote Desktop Manager"
authors = ["rdesq"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
aes-gcm = "0.10"
uuid = { version = "1", features = ["v4"] }
tokio = { version = "1", features = ["full"] }
rand = "0.8"
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22"
tauri-plugin-autostart = "2"
tauri-plugin-dialog = "2"

[profile.release]
opt-level = "z"
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"
